--- a/src/nlp/resources/web/ArcSummary.html
+++ b/src/nlp/resources/web/ArcSummary.html
@@ -100,7 +100,7 @@
 </div>
 <div class="form-group row" id="log">
     <label class="col-sm-2 control-label" id="panel"></label>
-    <button class="btn btn-primary" id="previousSettings">Show previous settings</button>
+    <button class="btn btn-primary" id="cancel">Cancel</button>
 </div>
 <script type="text/javascript" src="ArcSummary.js"></script>
 </body>
