--- a/src/other/resources/PublicChat.html
+++ b/src/other/resources/PublicChat.html
@@ -1,13 +1,15 @@
 <html>
 <head>
     <style>
-        /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-        .row.content {height: 1500px}
-
         /* Set gray background color and 100% height */
         .sidenav {
         background-color: #f1f1f1;
         height: 100%;
+        }
+
+        footer {
+        background-color: #f1f1f1;
+        padding: 15px;
         }
     </style>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -26,8 +28,17 @@
     <div class="row content">
         <div class="col-sm-3 sidenav">
             <h4>Users</h4>
-            <ul class="nav nav-pills nav-stacked">
-                <li>Number of users: <q id="numberOfUsers">0</q></li>
+
+            <div class="form-group">
+                <label>MyId : </label>
+                <input type="text" class="form-control" id="myIdIn">
+                <button type="button" class="btn btn-default" id="changeNameButton">Change ID</button>
+            </div>
+            <div class="form-group">
+                <label>Number of users : </label>
+                <label id="numberOfUsers">0</label>
+            </div>
+            <ul class="nav nav-pills nav-stacked" id="userNames">
             </ul>
         </div>
         <div class="col-sm-9">
@@ -41,15 +52,19 @@
                 <textarea class="form-control" rows="3" id="input" onkeypress="inputKeyPress(event)"></textarea>
                 <br>
 
-                <p>shift + Enter = new line</p>
+                <p id="shiftPlusEnterP">shift + Enter = new line</p>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-default" id="clear">Clear</button>
+                <button type="button" class="btn btn-default" id="send">Send</button>
+                <button type="button" class="btn btn-default" id="clear">Clear Server</button>
             </div>
 
         </div>
     </div>
 </div>
+<footer class="container-fluid">
+    <p>Pedroth</p>
+</footer>
 <script type="text/javascript" src="PublicChat.js"></script>
 </body>
 </html>
