upload milestone done

--- a/src/other/resources/PublicChat.html
+++ b/src/other/resources/PublicChat.html
@@ -98,7 +98,8 @@
     </div>
 </div>
 <footer class="container-fluid">
-    <p>Pedroth</p>
+    <a target='_blank' href="https://github.com/pedroth/pedroEngine/blob/master/src/other/PublicChatServer.java"><p>
+        Code</p></a>
 </footer>
 <script type="text/javascript" src="PublicChat.js"></script>
 </body>
